updated MPI Lab

--- a/Labs/GPU_Parallelization_of_Matrix-Matrix_Multiplication.ipynb
+++ b/Labs/GPU_Parallelization_of_Matrix-Matrix_Multiplication.ipynb
@@ -48,9 +48,17 @@
    "id": "e913f671",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from numba import cuda\n",
+    "import numpy as np\n",
+    "from time import time\n",
+    "import cupy\n",
+    "\n",
+    "print(cuda.gpus)"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a00e9a09",
    "metadata": {},
@@ -62,7 +70,7 @@
     "Before we examine matrix-matrix multiplication, we will first write a GPU kernel that transposes a square matrix.  This type of problem is a good introduction into how to use the CUDA threading model. The task for this exercise is to write a Numba CUDA kernel that will transpose a square matrix. \n",
     "\n",
     "**Before you start**, take a look at the following:\n",
-    "* Read over the following notebook that explanes Numba.CUDA kernels: [Writing Numba.CUDA kernels Notebook](https://github.com/ContinuumIO/gtc2017-numba/blob/master/4%20-%20Writing%20CUDA%20Kernels.ipynb) \n",
+    "* Read over the following notebook that explains Numba.CUDA kernels: [Writing Numba.CUDA kernels Notebook](https://github.com/ContinuumIO/gtc2017-numba/blob/master/4%20-%20Writing%20CUDA%20Kernels.ipynb) \n",
     "* The first matrix-matrix multiplication code (the one that **doesn't** use shared memory) shown at [NYU Numba CUDA Lab5](https://nyu-cds.github.io/python-numba/05-cuda/). Understanding this code should give a pretty good idea on how to write the transpose kernel. The matrix-matrix kernel code from the NYU lab is shown below.\n",
     "```python\n",
     "@cuda.jit\n",
@@ -89,7 +97,19 @@
    "id": "ba3f5c59",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "@cuda.jit\n",
+    "def mat_trans(A, AT):\n",
+    "    \"\"\" Perform matrix transpose of A\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    start_x, start_y = cuda.grid(2)\n",
+    "    stride_x, stride_y = cuda.gridsize(2)\n",
+    "\n",
+    "    for i in range(start_x, A.shape[0], stride_x):\n",
+    "        for j in range(start_y, A.shape[1], stride_y):\n",
+    "            AT[j, i] = A[i, j]"
+   ]
   },
   {
    "cell_type": "markdown",
