--- a/Labs/MPI/Python_MPI_Matrix_Matrix_Multiplication.ipynb
+++ b/Labs/MPI/Python_MPI_Matrix_Matrix_Multiplication.ipynb
@@ -54,8 +54,8 @@
     "    * Similarly, create the data for each \"column-block\" of $\\mathbf B$ only once per block, then send it to all other processes that need that block, but not to processes that don't need it.\n",
     "4. Before running a Slurm sbatch job. Besure that you test your code on a single node. A good test would be to use $M = 4$ processes, and $N = 4$ rows and columns (like **Figure-1**). Also make sure to test that your parallel version calculates the same answer as a serial (single process version). This later test can be done in the same Python code, but it can be tricky.\n",
     "1. After the above tests pass, then setup an sbatch script (a skeleton example is included in the repo for this lab) to submit your code to the cluster. Only use the **preempt** queue, and **please be mindful** of the number of nodes you use. Besure to test the following cases (you will be limited on how much memory you can use due to what I think is a bug in *mpi4py* related to an integer-overflow):\n",
-    "    * 2 nodes each with 8 process and both $N=20240$ and $N=40960$\n",
-    "    * 4 nodes each with 16 process and both $N=20240$ and $N=40960$\n",
+    "    * 2 nodes each with 8 process and both $N=20480$ and $N=40960$\n",
+    "    * 4 nodes each with 16 process and both $N=20480$ and $N=40960$\n",
     "    * Each of the above with matrices of type float32 and then float64\n",
     "6. Commit the following to your repository for this lab: \n",
     "    * A small report  comparing the performances between the tests in task-5 above, including a discussion regarding your thoughts on the speedup/slowdown between the float32 and float64 runs and between the 2-node and 4-node runs.\n",
@@ -131,11 +131,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "from time import time"
    ]
   },
   {
@@ -147,17 +148,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1min 26s ± 137 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "Numpy function time: 208.98301 s\n"
      ]
     }
    ],
    "source": [
-    "%%timeit\n",
-    "\n",
     "N = 20480\n",
+    "\n",
     "A = np.random.rand(N, N)\n",
     "B = np.random.rand(N, N)\n",
-    "C = np.dot(A, B)"
+    "t1 = time()\n",
+    "C = np.dot(A, B)\n",
+    "t2 = time()\n",
+    "\n",
+    "del A, B, C\n",
+    "print(f'Numpy function time: {(t2-t1):.5f} s')"
    ]
   },
   {
@@ -171,29 +176,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "| Matrix Size (N)      | Processors (M) | Float Type      | Run Time   |\n",
-    "| :---:                | :---:          | :---:           | :---:      |\n",
-    "| 20480                | 16             | Float32         | 38 s       |\n",
-    "| 20480                | 16             | Float64         | 67 s       |\n",
-    "| 20480                | 64             | Float32         | 84 s       |\n",
-    "| 20480                | 64             | Float64         | 115 s      |\n",
-    "| 40960                | 16             | Float32         | 101 s      |\n",
-    "| 40960                | 16             | Float64         | 152 s      |\n",
-    "| 40960                | 64             | Float32         | 175 s      |\n",
-    "| 40960                | 64             | Float64         | 341 s      |"
+    "| Matrix Size (N)      | Processors (M) | Float Type       | Run Time   |       |       | N      | M | Float Type       | Run Time   |       |       | N      | M | Float Type       | Run Time   |\n",
+    "| :---:                | :---:          | :---:            | :---:      | :---: | :---: | :---:                | :---:          | :---:            | :---:      | :---: | :---: | :---:                | :---:          | :---:            | :---:      |\n",
+    "| 20480                | 16             | Float 32         | 31 s       |       |       | 40960                | 16             | Float 32         | 155 s      |\n",
+    "| 20480                | 16             | Float 64         | 63 s       |       |       | 40960                | 16             | Float 64         | 217 s      |\n",
+    "| 20480                | 64             | Float 32         |  8 s       |       |       | 40960                | 64             | Float 32         | 39 s       |       |       | 61440                | 64             | Float 32         | 107 s       |\n",
+    "| 20480                | 64             | Float 64         | 14 s       |       |       | 40960                | 64             | Float 64         | 75 s       |       |       | 61440                | 64             | Float 64         | 228 s       |"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Run times in the table above are from the **Sherlock** cluster. \n",
+    "1. Float type: In general, float64 doubles the run time compared with float32. This is expected, as the size of float64 is doubled, which subsequently doubles the number of operations on binary digits.\n",
+    "2. Number of processors ($M$): Run time for $M = 64$ is basically one-fourth of run time for $M = 16$, because the same amount of computation is distributed to more threads. In the slurm job files, I also record the time for each step, such as: creating MPI communicators, broadcasting matrix blocks, matrix block computation and gathering of final output matrix. For $M = 64$ the broadcasting step can also be four times faster, due to the smaller size of each block to send, more sub-communicators to broadcast at the same time, and most importantly the communication network of the cluster. **Sherlock** cluster extends across 2 Infiniband fabrics, which have \"very high bandwidth and very low latency\".\n",
+    "3. Matrix size ($N$): Direct matrix-matrix multiplication has an overall complexity of $O(N^3)$. BLAS can reduce the exponent to around $2.7$. With large matrix size $N$, the matrix block multiplication takes up the majority of the total runtime. A detailed cost for each step is summarized below for $M = 64$ and using float64 type. Note that for broadcast and gather steps, runtime basically follows $O(N^2)$, consistent with the total number of matrix elements to communicate. For block multiplication, the $O(N^3)$ behavior is observed."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Runtime cost by each step when using 64 processors and 64-bit float**\n",
+    "| Matrix Size (N) | Broadcast Time | Block Multiplication Time | Gather Time |\n",
+    "| :---:           | :---:          | :---:                     | :---:       |\n",
+    "| 20480           | 2 s            | 5 s                       | 4 s         |\n",
+    "| 40960           | 9 s            | 50 s                      | 13 s        |\n",
+    "| 61440           | 20 s           | 174 s                     | 29 s        |\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Unfortunately, the same MPI code does not perform well on Google Cloud cluster. As an example, for $N = 20480$ and $64$ processors, broadcast and gather time cost more than 10 minutes each. Even the matrix block multiplication costs 30 s. This indicates that the communication structure significantly influences code-writing strategy for MPI communication among threads."
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -207,7 +233,36 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.8.5"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   },
   "vscode": {
    "interpreter": {
