updated MPI Lab

--- a/Labs/MPI/Python_MPI_Matrix_Matrix_Multiplication.ipynb
+++ b/Labs/MPI/Python_MPI_Matrix_Matrix_Multiplication.ipynb
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,14 +141,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Numpy function time: 208.98301 s\n"
+      "Numpy function time: 187.72271 s\n"
      ]
     }
    ],
@@ -213,7 +213,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Unfortunately, the same MPI code does not perform well on Google Cloud cluster. As an example, for $N = 20480$ and $64$ processors, broadcast and gather time cost more than 10 minutes each. Even the matrix block multiplication costs 30 s. This indicates that the communication structure significantly influences code-writing strategy for MPI communication among threads."
+    "Unfortunately, the same MPI code does not perform well on Google Cloud cluster. As an example, for $N = 20480$ and $64$ processors, broadcast and gather time cost more than 10 minutes each. Even the matrix block multiplication costs 30 s. This indicates that the communication structure significantly influences code-writing strategy for MPI communication among threads.\n",
+    "\n",
+    "The cells in front of the report show the single core runtime on my laptop. Compared to the MPI cases, although using $M$ processors does not lead to a speed-up of $M$, due to the difference in cpu performance, message broadcasting, etc., the importance of parallelism is to drastically decrease the memory requirement for each core, which enables computation of matrices with even larger sizes.\n",
+    "\n",
+    "Besides, within Slurm script for Sherlock I explicitly define the memory required for the entire job. The value is estimated from the matrix size. As an example, for $N = 40960$ and 64-bit floats, each single matrix has size of $13.4$ GB, and three matrices sum to $40.2$ GB. My test shows that when setting the memory to be larger than $60$ GB, the program will not show out-of-memory error. I also need to immediately free out memory to meet this lower limit. In the MPI Python code, matrix blocks from input matrices are deleted after the matrix block multiplication."
    ]
   }
  ],
