updated GPU Lab

--- a/Labs/GPU_Parallelization_of_Matrix-Matrix_Multiplication.ipynb
+++ b/Labs/GPU_Parallelization_of_Matrix-Matrix_Multiplication.ipynb
@@ -50,6 +50,7 @@
    "outputs": [],
    "source": [
     "from numba import cuda\n",
+    "import numba as nb\n",
     "import numpy as np\n",
     "from time import time\n",
     "import cupy\n",
@@ -154,12 +155,103 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "06b58e68",
+   "metadata": {},
+   "source": [
+    "### Matrix multiplication (WITHOUT shared memory)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "99735477",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Matrix multiplication (WITHOUT shared memory)\n",
+    "@cuda.jit\n",
+    "def matmul(A, B, C):\n",
+    "    \"\"\"Perform matrix multiplication of C = A * B\n",
+    "    \"\"\"\n",
+    "    start_x, start_y = cuda.grid(2)\n",
+    "    stride_x, stride_y = cuda.gridsize(2)\n",
+    "\n",
+    "    for i in range(start_x, C.shape[0], stride_x):\n",
+    "        for j in range(start_y, C.shape[1], stride_y):\n",
+    "            tmp = 0.\n",
+    "            for k in range(A.shape[1]):\n",
+    "                tmp += A[i, k] * B[k, j]\n",
+    "            C[i, j] = tmp"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "7df840f6",
+   "metadata": {},
+   "source": [
+    "### Matrix multiplication (WITH shared memory)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71529bca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Matrix multiplication (WITH shared memory)\n",
+    "\n",
+    "# Float type\n",
+    "ftype = 'float64'\n",
+    "\n",
+    "# Controls threads per block and shared memory usage.\n",
+    "# The computation will be done on blocks of TPB * TPB elements.\n",
+    "TPB = 16\n",
+    "threads_per_block = (TPB, TPB)\n",
+    "\n",
+    "@cuda.jit\n",
+    "def fast_matmul(A, B, C):\n",
+    "    \"\"\"\n",
+    "    Perform matrix multiplication of C = A * B\n",
+    "    Each thread computes one element of the result matrix C\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Define an array in the shared memory\n",
+    "    # The size and type of the arrays must be known at compile time\n",
+    "    sA = cuda.shared.array(shape=(TPB, TPB), dtype=ftype)\n",
+    "    sB = cuda.shared.array(shape=(TPB, TPB), dtype=ftype)\n",
+    "\n",
+    "    tx = cuda.threadIdx.x\n",
+    "    ty = cuda.threadIdx.y\n",
+    "\n",
+    "    start_x, start_y = cuda.grid(2)\n",
+    "    \n",
+    "    for x in range(start_x, C.shape[0], TPB):\n",
+    "        for y in range(start_y, C.shape[1], TPB):\n",
+    "\n",
+    "            # Each thread computes one element in the result matrix.\n",
+    "            # The dot product is chunked into dot products of TPB-long vectors.\n",
+    "            tmp = 0.\n",
+    "            for i in range(int(A.shape[1] / TPB)):\n",
+    "                # Preload data into shared memory\n",
+    "                sA[tx, ty] = A[x, ty + i * TPB]\n",
+    "                sB[tx, ty] = B[tx + i * TPB, y]\n",
+    "\n",
+    "                # Wait until all threads finish preloading\n",
+    "                cuda.syncthreads()\n",
+    "\n",
+    "                # Computes partial product on the shared memory\n",
+    "                for j in range(TPB):\n",
+    "                    tmp += sA[tx, j] * sB[j, ty]\n",
+    "\n",
+    "                # Wait until all threads finish computing\n",
+    "                cuda.syncthreads()\n",
+    "\n",
+    "            C[x, y] = tmp"
+   ]
   },
   {
    "cell_type": "markdown",
