updated DASK Lab

--- a/Labs/Dask/DASK.ipynb
+++ b/Labs/Dask/DASK.ipynb
@@ -62,49 +62,74 @@
     "\n",
     "1. If one wishes to start a *Local Cluster*, what parameter, if any, needs to be passed to the *Client* constructor?\n",
     "\n",
+    "* No parameter needs to be passed to *Client* constructor, i.e. `client = Client()` is what we need. A more explicit way is to first create a *LocalCluster* by `cluster = LocalCluster()`, and then pass it to *Client* by `client = Client(cluster)`.\n",
+    "\n",
     "<br>\n",
     "\n",
     "2. What is the difference between the following two *Cluster* parameters: *n_workers* and *threads_per_worker*?\n",
+    "\n",
+    "* *n_workers* is the number of workers to start, *threads_per_worker* is the number of threads per each worker. By default, *n_workers* is the number of available cores and *threads_per_worker=1*.\n",
     "\n",
     "<br>\n",
     "\n",
     "3. How can one get a link to the *Dashboard* from a *Client*?\n",
     "\n",
+    "\n",
+    "* `client.dashboard_link` for a *Client* object named *client*.\n",
+    "\n",
     "<br>\n",
     "\n",
     "4. How can a *LocalCluster* that is associated with a *Client* be rescaled?\n",
+    "\n",
+    "* `cluster.scale(n_workers)`\n",
     "\n",
     "<br>\n",
     "\n",
     "5. What does the *Client.map()* function return?\n",
     "\n",
+    "* `client.map(func, iterables)` returns a bunch of *futures* that correspond to the application of function *func* on a sequence of inputs *iterables*.\n",
+    "\n",
     "<br>\n",
     "\n",
     "6. What does the *wait()* function do?\n",
+    "\n",
+    "* `wait(futures)` will wait until all / any futures are finished. Parameter *return_when* can be either *ALL_COMPLETED* or *FIRST_COMPLETED*.\n",
     "\n",
     "<br>\n",
     "\n",
     "7. What does the *Client.who_has()* function do?\n",
     "\n",
+    "* `client.who_has(futures)` returns the workers that store each future's data.\n",
+    "\n",
     "<br>\n",
     "\n",
     "8. What does the *Client.gather()* function return, and where does the memory exist for the thing or things that are returned (e.g. in the memory of the worker(s), or in the memory of the \"host-python-thread\" (e.g. Jupyter-Notebook thread) that is interacting with the *Client* and *LocalCluster*)?\n",
+    "\n",
+    "* `client.gather(futures)` gathers results of the futures from distributed memory (of the workers) to the local memory (\"host-python-thread\"). \n",
     "\n",
     "<br>\n",
     "\n",
     "9. Can copies of the same memory exist both in the workers and on the \"host-python-thread\"?\n",
     "\n",
+    "* No, the central scheduler only keeps track of the data through futures.\n",
+    "\n",
     "<br>\n",
     "\n",
     "10. What function can be used to \"clean-up/release\" the memory held by a worker or workers?\n",
+    "\n",
+    "* `client.cancel(futures)`\n",
     "\n",
     "<br>\n",
     "\n",
     "11. How can one rescale the number of workers in a cluster?\n",
     "\n",
+    "* `cluster.scale(n_workers)`\n",
+    "\n",
     "<br>\n",
     "\n",
     "12. How can data that is stored in the \"host-python-thread\" be distributed to workers in a *Cluster*/*LocalCluster*?\n",
+    "\n",
+    "* `client.scatter(data, workers)`\n",
     "\n",
     "<br><br>"
    ]
@@ -125,7 +150,7 @@
     "* Collect the data to the \"host-python-thread\" that is running this notebook\n",
     "* Clean-up data that resides in the workers\n",
     "* Rescale the cluster\n",
-    "* Concatenate the gathered data along the time-axis to get it ready for parallel proccessing along the time time axis."
+    "* Concatenate the gathered data along the time-axis to get it ready for parallel proccessing along the time axis."
    ]
   },
   {
