updated GPU Lab

--- a/Labs/GPU_Parallelization_of_Matrix_Matrix_Multiplication.ipynb
+++ b/Labs/GPU_Parallelization_of_Matrix_Matrix_Multiplication.ipynb
@@ -229,6 +229,7 @@
    "outputs": [],
    "source": [
     "### Loops within CUDA kernel\n",
+    "### Not used currently, performance is similar\n",
     "# Matrix multiplication (NO shared memory)\n",
     "\n",
     "@cuda.jit\n",
@@ -559,6 +560,31 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "c3c0435e",
+   "metadata": {},
+   "source": [
+    "### Discussion of Exercise 2\n",
+    "\n",
+    "| Float32             | N = 5120      | N = 10240     | N = 20480     |\n",
+    "|---------------------|---------------|---------------|---------------|\n",
+    "| Numpy               | 0.55 s        | 4.42 s        | 30.08 s       |\n",
+    "| No Shared Memory    | $\\times$ 5.54 | $\\times$ 5.50 | $\\times$ 6.80 |\n",
+    "| With Shared Memory  | $\\times$ 4.94 | $\\times$ 4.78 | $\\times$ 5.54 |\n",
+    "\n",
+    "The table above shows the matrix multiplication runtime for Float32 type using numpy function np.dot(), as well as GPU CUDA kernels without and with shared memory. `threads_per_block` is set to 16, which is the same for shared memory usage. `blocks_per_grid` is determined by matrix size. The array copy time between host and device is very small compared to matrix multiplication kernel runtime. In contrast with expectation, GPU CUDA kernel is about 5 times slower than np.dot(). Usage of shared memory can increase the speed for about 15%. In terms of matrix size $N$, the computation complexity is close to $O(N^3)$.\n",
+    "\n",
+    "| Float64             | N = 5120      | N = 10240     | N = 20480     |\n",
+    "|---------------------|---------------|---------------|---------------|\n",
+    "| Numpy               | 1.18 s        | 9.52 s        | 64.13 s       |\n",
+    "| No Shared Memory    | $\\times$ 4.72 | $\\times$ 5.28 | $\\times$ 7.22 |\n",
+    "| With Shared Memory  | $\\times$ 4.96 | $\\times$ 4.80 | $\\times$ 5.62 |\n",
+    "\n",
+    "For Float64 type, the runtime is doubled due to representation of floats with higher precision. However, the ratios of runtime for different methods are similar. The longer runtime of GPU CUDA might be due to compilation of kernels."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a5f35012",
    "metadata": {
@@ -659,6 +685,29 @@
     "print(f'Element-wise error: {np.mean(h_C - np_C):.6g}. Epsilon for current float type: {np.finfo(ftype).eps:.6g}.')\n",
     "print(f'Cupy function time: {(t_cp/1e3):6.5f} s')\n",
     "print(f'Numpy function time: {(t_np/1e3):6.5f} s')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "3de0e413",
+   "metadata": {},
+   "source": [
+    "### Discussion of Exercise 3\n",
+    "\n",
+    "| Float32 | N = 5120      | N = 10240     | N = 20480     |\n",
+    "|---------|---------------|---------------|---------------|\n",
+    "| Numpy   | 0.56 s        | 4.35 s        | 29.77 s       |\n",
+    "| Cupy    | $\\times$ 0.43 | $\\times$ 0.37 | $\\times$ 0.25 |\n",
+    "\n",
+    "The table above shows the matrix multiplication runtime for Float32 type using numpy function np.dot() and cupy function cupy.dot(). GPU optimization is significant for CuPy in this case, and with larger matrix size $N$ the advantage becomes greater and can be even 4 times faster than np.dot(). Besides, it is very easy to code with CuPy compared to writing CUDA kernels.\n",
+    "\n",
+    "| Float64 | N = 5120      | N = 10240     | N = 20480     |\n",
+    "|---------|---------------|---------------|---------------|\n",
+    "| Numpy   | 1.16 s        | 8.80 s        | 64.12 s       |\n",
+    "| Cupy    | $\\times$ 1.31 | $\\times$ 1.23 | $\\times$ 1.17 |\n",
+    "\n",
+    "For Float64 type, however, the performance of cupy.dot() is similar to np.dot()."
    ]
   },
   {
@@ -784,12 +833,29 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "064c79de",
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "d05462a8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Discussion of Exercise $\\pi$\n",
+    "\n",
+    "| Float32   | Host to Device | Device to Cupy | Host to Cupy |\n",
+    "|-----------|----------------|----------------|--------------|\n",
+    "| N = 5120  | 46.8 ms        | 0.23 ms        | 52.6 ms      |\n",
+    "| N = 10240 | 183.8 ms       | 0.26 ms        | 203.2 ms     |\n",
+    "| N = 20480 | 705.3 ms       | 0.41 ms        | 2814.0 ms    |\n",
+    "\n",
+    "The table above shows the array wrapping runtime for Float32 type. The interesting result is that passing the host array to CuPy array directly (i.e. `cu_A = cupy.asarray(h_A)`) is slower than passing through an intermediate device array (i.e. first `d_A = cuda.to_device(h_A)` and then `cu_A = cupy.asarray(d_A)`). Because the device array and CuPy array are both for GPU computation, they might be similar and thus the conversion time between these two types is negligible.\n",
+    "\n",
+    "| Float64   | Host to Device | Device to Cupy | Host to Cupy |\n",
+    "|-----------|----------------|----------------|--------------|\n",
+    "| N = 5120  | 90.7 ms        | 0.26 ms        | 106.8 ms     |\n",
+    "| N = 10240 | 364.3 ms       | 0.27 ms        | 405.8 ms     |\n",
+    "| N = 20480 | 1411.1 ms      | 0.44 ms        | 5542.7 ms    |\n",
+    "\n",
+    "For Float64 type, the conclusion is the same. The runtime to wrap host array into device or CuPy array is doubled, due to the higher precision to represent floats."
+   ]
   }
  ],
  "metadata": {
