updated GPU Lab

--- a/Labs/GPU_Parallelization_of_Matrix_Matrix_Multiplication.ipynb
+++ b/Labs/GPU_Parallelization_of_Matrix_Matrix_Multiplication.ipynb
@@ -846,7 +846,7 @@
     "| N = 10240 | 183.8 ms       | 0.26 ms        | 203.2 ms     |\n",
     "| N = 20480 | 705.3 ms       | 0.41 ms        | 2814.0 ms    |\n",
     "\n",
-    "The table above shows the array wrapping runtime for Float32 type. The interesting result is that passing the host array to CuPy array directly (i.e. `cu_A = cupy.asarray(h_A)`) is slower than passing through an intermediate device array (i.e. first `d_A = cuda.to_device(h_A)` and then `cu_A = cupy.asarray(d_A)`). Because the device array and CuPy array are both for GPU computation, they might be similar and thus the conversion time between these two types is negligible.\n",
+    "The table above shows the array wrapping runtime for Float32 type. The interesting result is that passing the host array to CuPy array directly (i.e. `cu_A = cupy.asarray(h_A)`) is slower than passing through an intermediate device array (i.e. first `d_A = cuda.to_device(h_A)` and then `cu_A = cupy.asarray(d_A)`). Because the device array and CuPy array are both for GPU computation, they might be similar in the GPU memory and thus the conversion time between these two types is negligible.\n",
     "\n",
     "| Float64   | Host to Device | Device to Cupy | Host to Cupy |\n",
     "|-----------|----------------|----------------|--------------|\n",
